--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^10.0.0",
+    "node-turn": "0.0.6",
     "peer": "^0.6.1",
     "uuid": "^8.3.2"
   }
